Clean up output directories and fix file extensions
Major cleanup of output directories:
- Removed codegemma level directories (obsolete model data)
- Removed 24,565 macOS Finder duplicate files across all directories
- Fixed file extensions to match prompts.yaml specifications
- Removed obsolete files from old prompt versions

Level study status after cleanup:
- 35 complete directories (730 files each)
- All files match current 730-prompt set
- No duplicates remaining

Scripts created:
- scripts/fix_file_extensions.py: Corrects extensions and removes obsolete files
- scripts/cleanup_duplicate_files.py: Removes macOS Finder duplicates

🤖 Generated with [Claude Code](https://claude.com/claude-code)
via [Happy](https://happy.engineering)

Co-Authored-By: Claude <noreply@anthropic.com>
Co-Authored-By: Happy <yesreply@happy.engineering>